Updated editor